// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-tag #render should render component as expected (1) 1`] = `
<gux-tag>
  <template shadowrootmode="open">
    <div aria-disabled="false" class="gux-accent-default gux-emphasis-bold gux-size-small gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  default
</gux-tag>
`;

exports[`gux-tag #render should render component as expected (2) 1`] = `
<gux-tag accent="default">
  <template shadowrootmode="open">
    <div aria-disabled="false" class="gux-accent-default gux-emphasis-bold gux-size-small gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  default (explicit)
</gux-tag>
`;

exports[`gux-tag #render should render component as expected (3) 1`] = `
<gux-tag accent="1">
  <template shadowrootmode="open">
    <div aria-disabled="false" class="gux-accent-1 gux-emphasis-bold gux-size-small gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  Accent 1
</gux-tag>
`;

exports[`gux-tag #render should render component as expected (4) 1`] = `
<gux-tag accent="1">
  <template shadowrootmode="open">
    <div aria-disabled="false" class="gux-accent-1 gux-emphasis-bold gux-size-small gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <gux-icon decorative="true" icon-name="bolt"></gux-icon>
  Accent 1
</gux-tag>
`;

exports[`gux-tag #render should render component as expected (5) 1`] = `
<gux-tag accent="1" removable="">
  <template shadowrootmode="open">
    <div aria-disabled="false" class="gux-accent-1 gux-emphasis-bold gux-size-small gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
      <button class="gux-tag-remove-button" type="button">
        <gux-icon class="gux-tag-remove-icon" icon-name="fa/xmark-large-regular" screenreader-text="Remove tag with label: "></gux-icon>
      </button>
    </div>
  </template>
  <gux-icon decorative="true" icon-name="bolt"></gux-icon>
  Accent 1
</gux-tag>
`;

exports[`gux-tag #render should render component as expected (6) 1`] = `
<gux-tag accent="1" disabled="" removable="">
  <template shadowrootmode="open">
    <div aria-disabled="true" class="gux-accent-1 gux-disabled gux-emphasis-bold gux-size-small gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        disabled tag with label:
      </div>
      <button class="gux-tag-remove-button" disabled="" type="button">
        <gux-icon class="gux-tag-remove-icon" icon-name="fa/xmark-large-regular" screenreader-text="Remove tag with label: "></gux-icon>
      </button>
    </div>
  </template>
  <gux-icon decorative="true" icon-name="bolt"></gux-icon>
  Accent 1
</gux-tag>
`;

exports[`gux-tag #render should render component as expected (7) 1`] = `
<gux-tag accent="1" emphasis="subtle">
  <template shadowrootmode="open">
    <div aria-disabled="false" class="gux-accent-1 gux-emphasis-subtle gux-size-small gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  Subtle 1
</gux-tag>
`;

exports[`gux-tag #render should render component as expected (8) 1`] = `
<gux-tag accent="1" emphasis="bold">
  <template shadowrootmode="open">
    <div aria-disabled="false" class="gux-accent-1 gux-emphasis-bold gux-size-small gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  Bold 1
</gux-tag>
`;

exports[`gux-tag #render should render component as expected (9) 1`] = `
<gux-tag accent="1" size="small">
  <template shadowrootmode="open">
    <div aria-disabled="false" class="gux-accent-1 gux-emphasis-bold gux-size-small gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  Small 1
</gux-tag>
`;

exports[`gux-tag #render should render component as expected (10) 1`] = `
<gux-tag accent="1" size="large">
  <template shadowrootmode="open">
    <div aria-disabled="false" class="gux-accent-1 gux-emphasis-bold gux-size-large gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  Large 1
</gux-tag>
`;
